--- a/css/orange.css
+++ b/css/orange.css
@@ -455,24 +455,6 @@ pre {
   max-height: 340px;
   overflow-y: scroll; }
 
-.container {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto; }
-  @media (min-width: 576px) {
-    .container {
-      max-width: 540px; } }
-  @media (min-width: 768px) {
-    .container {
-      max-width: 720px; } }
-  @media (min-width: 992px) {
-    .container {
-      max-width: 960px; } }
-  @media (min-width: 1200px) {
-    .container {
-      max-width: 1140px; } }
 
 .container-fluid {
   width: 100%;
@@ -7858,9 +7840,6 @@ footer h5 {
   z-index: 1511;
   display: inline-block;
   position: relative;
-  width: 550px;
-  height: 70vh;
-  aspect-ratio: 1/1;
   border-radius: 50%;
   overflow: hidden;
   align-items: center;
@@ -7909,10 +7888,10 @@ footer h5 {
   top: 50%;
   border-radius: 50%;
   z-index: 2000;
-  width: 150px;
-  height: 150px;
+  width: 10vw;
+  height: 10vw;
   background-color: black;
-  transform: translate(-75px, -75px);
+  transform: translate(-5vw, -5vw);
   align-items:center;
   justify-content:center;
   font-size: 2.5em;
@@ -7949,4 +7928,7 @@ footer h5 {
   font-size: 30px;
   font-weight: bold;
   z-index: 3000;
+}
+.circle-content {
+  height: 100%
 }
